@@ -1,6 +1,7 @@
 [mod-setting-name]
 statsgui-adjust-for-clock=Adjust for clock
 statsgui-adjust-for-fps-ups=Adjust for FPS/UPS indicator
+statsgui-show-playtime-in-days=Show playtime in days
 statsgui-show-sensor-daytime=Show daytime
 statsgui-show-sensor-evolution=Show evolution
 statsgui-show-sensor-playtime=Show playtime
@@ -16,6 +17,7 @@ statsgui-single-line=Disable to show the stats in a column under the FPS/UPS ind
 [statsgui]
 day=day
 evolution=Evolution
+playtime-days=__1__ days, __2__
 playtime=Playtime
 pollution=Pollution
 position=Position
