@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: ????
-  Changes:
+  Features:
+    - Added a per-player setting to show game playtime in days. (#2)
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2022-02-03
